video6/kubernetes/apps/python-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: golang-app-dev
    http:
      paths:
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: golang-app-svc
            port:
              number: 8080
